chore(test): save test suite updates before merging develop